# gbrs

./: .gitignore  Cargo.toml  LICENSE  README.md  affected_flags.txt  build.rs
py-analysis/: graph.py  main.py
res/boot/: readme.txt
res/icon/: icon.aseprite  icon.rc
src/: game_boy.rs  gameboy.rs  main.rs  window.rs
src/game_boy/: cpu.rs  helpers.rs  interrupt.rs  memory.rs  video.rs
src/game_boy/cpu/: callmap.rs  debug.rs  instructions.rs  interrupts.rs  time.rs
src/game_boy/memory/: addresses.rs  adresses.rs  debug.rs  flags.rs  misc.rs  rom.rs  video.rs
