[package]
name = "gbrs"
version = "0.1.0"
authors = ["Tobias Nienhaus <me@tobiasnienhaus.me>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.28.0"
# For now for testing
rand = "0.9.2"
clap = "2.33.3"
# https://docs.rs/bitfield/0.13.2/bitfield/macro.bitfield.html

[build-dependencies]
embed-resource = "3.0.6"

#[profile.release]
#debug = true
